--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "test:watch": "yarn jest --watch"
   },
   "dependencies": {
+    "leaflet": "^1.8.0",
     "next": "12.1.6",
     "next-pwa": "^5.5.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-leaflet": "^4.0.0",
     "styled-components": "^5.3.5",
     "webpack": "4"
   },
@@ -23,6 +25,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@types/jest": "^27.5.1",
+    "@types/leaflet": "^1.7.10",
     "@types/node": "^17.0.31",
     "@types/react": "^18.0.9",
     "@types/styled-components": "^5.1.25",
