--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:watch": "yarn jest --watch"
   },
   "dependencies": {
+    "@styled-icons/evaicons-outline": "^10.34.0",
     "leaflet": "^1.8.0",
     "next": "12.1.6",
     "next-pwa": "^5.5.2",
